<resources>
    <string name="app_name">Hangout</string>

    <!-- Strings related to Facebook-->
    <string name="facebook_app_id">474167099417747</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_fb">Sign in with Facebook</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_my_home">MyHomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_login">MyLoginActivity</string>
    <string name="title_activity_register">Regieter</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_show_event">ShowEventActivity</string>


    <string name="create_event">Create Event</string>
    <string name="create_event_name">Event Name</string>
    <string name="create_event_location">Event Location</string>
    <string name="create_event_description">Event Description</string>
    <string name="create_event_peoplecount">Desired Number of people</string>
    <string name="create_event_time">Time</string>
    <string name="create_event_button">Create Event</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="about">About</string>
    <string name="host">Host</string>
    <string name="attendees">People Attending</string>
    <string name="comments">Comments</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--strings related to profile-->
    <string name="user_name">Alex Wang</string>
    <string name="search">search</string>
    <string name="create">create</string>
    <string name="map">map</string>
    <string name="profile">me</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>

</resources>
