<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.example.supersaiyans.hangout.myhome"
    android:id="@+id/linearlayoutmyhome"
    android:gravity="clip_vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Recommended"
        android:id="@+id/textView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userInfo"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        />


    <ExpandableListView
        android:layout_width="wrap_content"
        android:id="@+id/expandableListView"
        android:layout_marginTop="10dp"
        android:choiceMode="multipleChoice"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/linearlayoutbuttons" android:gravity="center"
        tools:context="com.example.supersaiyans.hangout.myhome"
        android:layout_alignParentBottom="true">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:id="@+id/button"
            android:onClick="showEvents"/>
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_toEndOf="@+id/imageView"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create"
            android:id="@+id/button2"
            android:onClick="loadEvent" />
        <!--android:layout_alignTop="@+id/button"-->
        <!--android:layout_toEndOf="@+id/button"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/map"
            android:id="@+id/button3"
            android:onClick="openMap"/>
        <!--android:layout_alignTop="@+id/button2"-->
        <!--android:layout_toEndOf="@+id/button2"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile"
            android:id="@+id/button4"
            android:onClick="openProfile"/>
        <!--android:layout_alignTop="@+id/button3"-->
        <!--android:layout_toEndOf="@+id/button3"-->

    </LinearLayout>

</LinearLayout>