<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/fn" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="First Name"
                android:inputType="textAutoCorrect" android:maxLines="1"
                android:singleLine="true" />

            <AutoCompleteTextView android:id="@+id/ln" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="Last Name"
                android:inputType="textAutoCorrect" android:maxLines="1"
                android:singleLine="true" />

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="SIGN UP"
                android:textStyle="bold"
                android:onClick="backToLogin"/>

            <Button android:id="@+id/sign_up_fb_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="SIGN UP with FACEBOOK"
                android:textStyle="bold"
                android:onClick="backToLogin" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>