<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.supersaiyans.hangout.EventDetailActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/description"
            android:layout_gravity="center_horizontal|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/time"
            android:layout_gravity="center_horizontal|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/location"
            android:layout_gravity="center_horizontal|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/organizer"
            android:layout_gravity="center_horizontal|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/participants"
            android:layout_gravity="center_horizontal|left" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Join"
                android:id="@+id/join" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leave"
                android:id="@+id/leave" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="See Map"
                android:id="@+id/seeMap" />

        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comment"
            android:hint="@string/comments"
            android:inputType="date|textAutoCorrect"
            android:layout_centerHorizontal="true" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comments" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="50dp"
        tools:context="com.example.supersaiyans.hangout.profile"
        android:id="@+id/linearlayoutbuttons"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/search"
            android:id="@+id/button"
            android:onClick="showEvents"/>
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_toEndOf="@+id/imageView"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/create"
            android:id="@+id/button2"
            android:onClick="loadEvent" />
        <!--android:layout_alignTop="@+id/button"-->
        <!--android:layout_toEndOf="@+id/button"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/map"
            android:id="@+id/button3"
            android:onClick="openMap"/>
        <!--android:layout_alignTop="@+id/button2"-->
        <!--android:layout_toEndOf="@+id/button2"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/profile"
            android:id="@+id/button4"/>
        <!--android:layout_alignTop="@+id/button3"-->
        <!--android:layout_toEndOf="@+id/button3"-->

    </LinearLayout>


</RelativeLayout>
