<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.example.leileiwu.hangout_map.profile"
    android:id="@+id/linearlayoutprofile">
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        tools:context="com.example.leileiwu.hangout_map.profile"
        android:id="@+id/linearlayoutprofiletop"
        android:layout_weight="4">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/linearlayoutportrait"
            android:layout_weight="1">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView"
                android:src="@drawable/portrait"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/user_name"
                android:id="@+id/textView7"
                android:textColor="#ffff181f"
                android:layout_gravity="center"/>
            <!--android:layout_below="@+id/imageButton"-->
            <!--android:layout_toStartOf="@+id/textView6"-->
            <!--android:layout_marginEnd="41dp"-->
            <!--android:textSize="@dimen/activity_horizontal_margin"-->

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:id="@+id/linearlayoutporteventsnumber"
            android:gravity="left"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Credits:10"
                android:id="@+id/textView"/>
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignStart="@+id/textView5"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Events:2"
                android:id="@+id/textView5" />
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_centerHorizontal="true"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Friends:100"
                android:id="@+id/textView6" />
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignStart="@+id/textView5"-->

        </LinearLayout>


        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/imageButton"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_toStartOf="@+id/textView"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_above="@+id/textView6" />-->
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Events"
        android:id="@+id/textView4"
        android:textSize="@android:dimen/app_icon_size"
        android:textColor="#ffffffff"
        android:background="#fa211c21"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"/>
    <!--android:layout_above="@+id/textView2"-->
    <!--android:layout_toEndOf="@+id/imageView"-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/linearlayoutlistview"
        android:layout_marginTop="1dp"
        android:layout_weight="5">

        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentTop="true"-->

        <ListView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ListView02"
            />
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="Water Rafting by Alex 12:00pm, Sat. Jul 4, Ohiopile State Park"-->
        <!--android:id="@+id/textView2"-->
        <!--android:layout_above="@+id/textView3"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginBottom="37dp"-->
        <!--android:layout_alignEnd="@+id/textView3" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="Friday Night Party by Vicky 12:00pm, Fri. Jul 10,           N Craig St."-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_above="@+id/button"-->
        <!--android:layout_toStartOf="@+id/button4" />-->
    </LinearLayout>






    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="50dp"
        tools:context="com.example.supersaiyans.hangout.profile"
        android:id="@+id/linearlayoutbuttons"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/search"
            android:id="@+id/button"
            android:onClick="showEvents"/>
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_toEndOf="@+id/imageView"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/create"
            android:id="@+id/button2"
            android:onClick="loadEvent" />
        <!--android:layout_alignTop="@+id/button"-->
        <!--android:layout_toEndOf="@+id/button"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/map"
            android:id="@+id/button3"
            android:onClick="openMap"/>
        <!--android:layout_alignTop="@+id/button2"-->
        <!--android:layout_toEndOf="@+id/button2"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/profile"
            android:id="@+id/button4"/>
        <!--android:layout_alignTop="@+id/button3"-->
        <!--android:layout_toEndOf="@+id/button3"-->

    </LinearLayout>

</LinearLayout>
